--- a/pjt3/2019_2nd_intern_pjt03/src/main/resources/application.properties
+++ b/pjt3/2019_2nd_intern_pjt03/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://10.113.116.52:13306/user13
 spring.datasource.username=user13
 spring.datasource.password=user13
+storage.path=D:/resources
